<resources>
    <string name="app_name">My Attendance App</string>
    <string name="app_version">v 1.0</string>
    <string name="verification_dis">Please Enter the verification code</string>
    <string name="Validate">Validate OTP </string>
    <string name="enter_otp_to_submit_the_details">Enter Otp to submit the details</string>
    <string name="verify_and_submit">"Verify "</string>
    <string name="cancel">Cancel</string>
    <string name="P">P</string>
    <string name="please_update_your_previous_version">Please update your previous version</string>
    <string name="A">A</string>
    <string name="re_send_otp">Resend Otp</string>
    <string name="user_id_login_page_edittext">User Id</string>
    <string name="password_login_page_edittext">Password</string>
    <string name="err_msg_phone">Enter user id</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="punch_in">Punch In</string>
    <string name="punch_out">Punch Out</string>
    <string name="enter_valid_otp">Enter valid Otp</string>
    <string name="verification_code">Verification Code</string>
    <string name="attendance">Attendance</string>
    <string name="user_not_active">User not Active</string>
    <string name="hiii">Hey,</string>
    <string name="please_login">Please Login</string>
    <string name="if_you_are_new_contact_to_admin">If you are new contact to Admin</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="permissionExplanation">Look, we really need your location&#8230;</string>
    <string name="switchOnLocationShort">Oops - You are using FAKE GPS Kindly Stop this to continue And Restart Your Phone to Refresh your location".</string>
    <string name="switchOnLocationLong">Oops - you seem to have disabled location services at the moment.
        To continue, please click on "OK" and enable
        location. If you\'re worried about battery usage, be sure to switch to energy saving mode. </string>
    <string name="permissionPermanentlyDeclined">Bummer! You have permanently declined the location permission.
        Click "OK" to change the permission
        settings.</string>
    <string name="mockLocationMessage">Stop\nMocking\nMe</string>
    <string name="empty">Empty</string>
    <string name="call_scheduled_successfully">Call_Scheduled_Successfully</string>
    <string name="Data_successfully_submitted">Date Successfully Submitted</string>
    <string name="Okay">Okay</string>
    <string name="Pa">P</string>
    <string name="p">P</string>
    <string name="Your_Attendance_Submitted_Successfully">Your attandance Submitted Successfully</string>
    <string name="close">Close</string>
    <string name="update_available">Update Available</string>
    <string name="Select_department_name">"Select Department "</string>
    <string name="Select_division_name">Select Division</string>
    <string name="Select_workLocation">Select Work Location</string>
    <string name="applicationUpdated">Application is Updated</string>
    <string name="err_msg_dept">Select Department</string>
    <string name="err_msg_div">Select Division</string>
    <string name="err_msg_sdate">Select Start Date</string>
    <string name="err_msg_edate">Select End Date</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="Select_month">Select Month</string>
    <string name="Select_year">Select Year</string>
    <string name="v_1_9">V 1.9</string>
    <string name="powered_by_gmda">Powered by GMDA</string>
    <string name="todo">todo</string>


    <string name="enterpassword">Enter password</string>
    <string name="enteruserid">Enter number</string>
    <string name="login">Login</string>
    <string name="develop_by_gmda">Powered by GMDA</string>
    <string name="forget_password_tap_here">Forget Password ?</string>
    <string name="junior_android_developer">Junior Android Developer</string>
    <string name="harsac">HARSAC</string>
    <string name="your_current_month_status">Your Current Month Status</string>
    <string name="total_present">Total Present :</string>
    <string name="total_absent">Total Absent :</string>
    <string name="total_late">Total Late :</string>
    <string name="total_leave">Total Leave :</string>

    <string name="welcome_your_day_in_card">Welcome Mark Your Day</string>
    <string name="check_in_your_day">Punch In your day</string>
    <string name="check_out_your_day">Punch Out your day</string>
    <string name="gmda_attendance_app"> My Attendance App</string>
    <string name="we_maintain_your_record">We Maintain Your Record</string>
    <string name="_24_n_apr_n_2022">24 \n Apr. \n 2022</string>
    <string name="punch_in_time"> Punch In Time</string>
    <string name="get_your_attendance_report_in_one_tap">Get Your Attendance Report in One Tap</string>
    <string name="my_profile">My Profile</string>
    <string name="profile">Profile</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="admin_name">Admin Name</string>
    <string name="gis_head_admin">Gis Head Admin</string>
    <string name="gmda_gurugram">GMDA Gurugram</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_new_member">Add New Member</string>
    <string name="delete_member">Delete Member</string>
    <string name="extra">Extra</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="gis_head">GIS Head</string>
    <string name="gmda_harsac">Gmda ,Harsac</string>
    <string name="gis_infrastructure">Gis InfraStructure</string>
    <string name="get_attendance_report_in_one_tap">Get Attendance Report in One Tap</string>
    <string name="see_all">See All ⬇</string>
    <string name="fake_location_detected">📍 Fake Location Detected</string>
    <string name="kindly_disable_fake_location_to_continue_in_this_app_n_thank_you">Kindly disable fake Location or fake Gps to continue in this app \n Thank You</string>
    <string name="reset_password">Reset Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="otp_verification">Otp Verification</string>
    <string name="sending_otp_in_your_mobile">Sending Otp in your mobile</string>
    <string name="enter_mobile_number">Enter Mobile Number *</string>
    <string name="dash_dash">------</string>
    <string name="total_holiday">Total Holiday</string>
    <string name="your_attendance_report">Your Attendance Report</string>
    <string name="just_one_tap_amp_get_your_all_report"><![CDATA[Just One Tap & get your all report]]></string>
    <string name="present_working_hours_status">📊 Present 🕒 Working Hours 📋 Status</string>
    <string name="enter_id">Enter Id</string>
    <string name="register">Register</string>
    <string name="register_user">Register User</string>
    <string name="employee_name">Employee Name *</string>
    <string name="enter_employee_name">Enter Employee Name *</string>
    <string name="dob">DOB *</string>
    <string name="enter_date_of_birth">Enter Date Of Birth *</string>
    <string name="mobile_number">Mobile Number *</string>
    <string name="email_id">Email Id *</string>
    <string name="enter_email_id">Enter email id *</string>
    <string name="department">Department *</string>
    <string name="division">Division *</string>
    <string name="enter_designation">Enter Designation *</string>
    <string name="designation">Designation *</string>
    <string name="work_location">Work Location *</string>
    <string name="enter_password">Enter Password</string>
    <string name="password">Password *</string>
    <string name="your_image">Your Image *</string>
    <string name="submit">Submit</string>
    <string name="checking_you">Checking You...</string>


</resources>
