<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/profile_menu"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile" />

    <item
        android:id="@+id/dashboard_menu"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/create_user"
        android:icon="@drawable/ic_baseline_person_add_alt_1_24"
        android:title="@string/add_new_member" />
    <item
        android:id="@+id/delete_user"
        android:icon="@drawable/ic_baseline_delete_forever_24"
        android:title="@string/delete_member" />


    <item android:title="@string/extra">
        <menu>


            <item
                android:id="@+id/logout_menu"
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout" />

            <item
                android:id="@+id/about_us_menu"
                android:icon="@drawable/about_us"
                android:title="@string/about_us" />

        </menu>


    </item>


</menu>
