<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".common_module.LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="4dp"
        app:cardMaxElevation="5dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/login_card_view_rel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:autoStart="true"
                android:contentDescription="@string/todo"

                android:src="@drawable/app_logo_design" />


            <TextView
                android:id="@+id/hiii"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view"
                android:fontFamily="sans-serif-medium"
                android:text="@string/hiii"
                android:textColor="@color/black"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/please_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hiii"
                android:fontFamily="sans-serif-medium"
                android:text="@string/please_login"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/contacttoadmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/please_login_tv"
                android:fontFamily="sans-serif"
                android:text="@string/if_you_are_new_contact_to_admin"
                android:textSize="12sp" />


            <LinearLayout
                android:id="@+id/number_password_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/contacttoadmin"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:textColorHint="@color/bgColor">

                    <EditText
                        android:id="@+id/login_user_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/iperson"
                        android:hint="@string/enter_id"
                        android:inputType="text"
                        android:textColorHint="@color/bgColor"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:textColorHint="@color/bgColor"
                    app:passwordToggleDrawable="@drawable/show_password_selector"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/bgColor">

                    <EditText
                        android:id="@+id/login_user_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/ilock"
                        android:hint="@string/enterpassword"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColorHint="@color/bgColor"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forget_password_tap_here_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"
                    android:gravity="end"
                    android:text="@string/forget_password_tap_here"
                    android:textAlignment="textEnd"
                    android:textColor="@color/bgColor"
                    android:textSize="11sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/login_btn_for_password"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/btn_back"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <TextView
                    android:gravity="center"
                    android:textStyle="bold"
                    android:id="@+id/login_btn_for_register"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="New User? Click for Registration" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/develop_by_gmda"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="0dp"
                android:layout_height="0dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>

