<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".common_module.SplashScreenActivity">


    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:id="@+id/logo"
        android:src="@drawable/app_logo_design" />


    <TextView
        android:id="@+id/gmda_attendance_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/logo"
        android:text="@string/gmda_attendance_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gmda_attendance_app"
        android:layout_toEndOf="@id/logo"
        android:text="@string/we_maintain_your_record"
        android:textAlignment="center"
        android:textSize="10sp" />


    <com.gmda.attendance.CommonClass.TypeWriter
        android:id="@+id/powered_by_gmda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />


    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_above="@id/powered_by_gmda"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/black"
        android:visibility="visible" />


    <TextView
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:layout_marginBottom="@dimen/spacing_10"
        android:text="@string/v_1_9">

    </TextView>

</RelativeLayout>