<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".common_module.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimaryDark"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:text="@string/register_user"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout1">

            <EditText
                android:id="@+id/et_employee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/enter_employee_name"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_margin="5dp"

            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout1">

            <EditText
                android:id="@+id/et_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/enter_date_of_birth"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout1">

            <EditText
                android:inputType="phone"
                android:maxLength="10"
                android:id="@+id/et_mobile_number"
                android:layout_width="match_parent"
                android:digits="0123456789"
                android:layout_height="wrap_content"
                android:hint="@string/enter_mobile_number"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"

            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout1">

            <EditText

                android:id="@+id/et_email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_id"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Employee ID *"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <CheckBox

                android:id="@+id/no_employee_id_check_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_weight="1"
                android:text="No Employee ID" />


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextAppearance="@style/error_appearance"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout1">

            <EditText
                android:inputType="number"
                android:id="@+id/et_employee_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Employee ID"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/department"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />


                <ProgressBar
                    android:id="@+id/department_progress_bar"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>


            <TextView
                android:id="@+id/sp_Department"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/line_background"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="Select Department Name"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/division_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/division"
                android:textColor="@color/black" />
            <TextView

                android:id="@+id/sp_division"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/line_background"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="Select Division Name"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:visibility="visible"
            android:id="@+id/designation_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Designation *"
                android:textColor="@color/black" />
            <TextView

                android:id="@+id/sp_designation"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/line_background"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="Select Designation Name"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/work_location"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:id="@+id/sp_work_location"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:background="@drawable/line_background"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="Select Working Location"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorPrimary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextAppearance="@style/error_appearance"
                app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout1">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:textCursorDrawable="@drawable/color_cursor" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_image"
            android:textColor="@color/colorPrimary" />
        <ImageView
            android:id="@+id/take_image"
            android:layout_width="@dimen/spacing_100"
            android:layout_height="@dimen/spacing_100"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_10"
            android:src="@drawable/user_selfie" />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_30"
            android:layout_marginTop="@dimen/spacing_20"
            android:layout_marginRight="@dimen/spacing_30"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_background"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>